--- a/product_detail.html
+++ b/product_detail.html
@@ -20,7 +20,7 @@
                 <li><a href="/products">Products</a></li>
                 <li><a href="">About</a></li>
                 <li><a href="/login">Login</a></li>
-                <li><a href="/Signup">Sign-up</a></li>
+                <li><a href="/signup">Sign-up</a></li>
             </ul>
         </nav>
         <a href="/cart"><img src="images/cart.png" width="30px" height="30px"></a>
